--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2552,6 +2552,15 @@ input::-webkit-inner-spin-button {
     font-size: 16px;
 }
 
+.price-info-view{
+    display: none;
+}
+
+@media(max-width: 992px){
+    .price-info-view{
+        display: block;
+    }
+}
 
 .main-cart-product ul li{
     line-height: 40px;
